tests/errors/nulllookup-badnull.o_0
a : {
 b : 3
 c : { d : 4 }
 j : Null
}
x : Null

value : a?.j.c
